test : 테스트 코드 수정
- 여러 케이스에 대해서는 lenient로 변경
- verify 추가
- clock의 getZone 도 stubbing