@@ -5,6 +5,7 @@ import com.ssafy.ssafsound.domain.lunch.domain.LunchPoll;
 import com.ssafy.ssafsound.domain.lunch.dto.GetLunchListElementResDto;
 import com.ssafy.ssafsound.domain.lunch.dto.GetLunchListReqDto;
 import com.ssafy.ssafsound.domain.lunch.dto.GetLunchListResDto;
+import com.ssafy.ssafsound.domain.lunch.dto.GetLunchResDto;
 import com.ssafy.ssafsound.domain.lunch.repository.LunchPollRepository;
 import com.ssafy.ssafsound.domain.lunch.repository.LunchRepository;
 import com.ssafy.ssafsound.domain.member.domain.Member;
@@ -24,14 +25,18 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.time.Clock;
+import java.time.Instant;
 import java.time.LocalDate;
+import java.time.ZoneId;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertAll;
 import static org.mockito.BDDMockito.given;
-import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class LunchServiceTest {
@@ -42,6 +47,8 @@ class LunchServiceTest {
     private LunchPollRepository lunchPollRepository;
     @Mock
     private MetaDataConsumer metaDataConsumer;
+    @Mock
+    private Clock clock;
 
     @InjectMocks
     private LunchService lunchService;
@@ -51,8 +58,9 @@ class LunchServiceTest {
     private Member member1;
     private Member member2;
     private LunchPoll lunchPoll;
-    private LocalDate today = LocalDate.now();
-    private LocalDate tomorrow = today.plusDays(1);
+    private String testLocalDateTime = "2023-07-10T10:15:00Z";
+    private String testLocalDate = "2023-07-10";
+    private LocalDate today = LocalDate.parse(testLocalDate);
     private MetaData testCampus;
 
     @BeforeEach
@@ -92,22 +100,24 @@ class LunchServiceTest {
     // 점심 메뉴 목록 조회 테스트
     @ParameterizedTest
     @CsvSource({"1, 서울, 2023-07-10, 0", "2, 서울, 2023-07-10, -1", "null, 서울, 2023-07-10, -1"})
-    @DisplayName("캠퍼스와 날짜로 점심 메뉴 목록을 조회한다.")
-    void Given_TodayDateAndCampus_When_FindLunches_Then_Succeed(@ConvertWith(NullableConverter.class)Long memberId, String inputCampus, LocalDate inputDate,
+    @DisplayName("멤버아이디, 캠퍼스, 날짜로 점심 메뉴 목록을 조회한다.")
+    void Given_DateAndCampus_When_FindLunches_Then_Succeed(@ConvertWith(NullableConverter.class)Long memberId, String inputCampus, LocalDate inputDate,
                                                                 Long outputPolledAt) {
 
         // given
+        given(clock.instant()).willReturn(Instant.parse(testLocalDateTime));
+        given(clock.getZone()).willReturn(ZoneId.of("Asia/Seoul"));
+
         given(metaDataConsumer.getMetaData(MetaDataType.CAMPUS.name(), inputCampus))
                 .willReturn(new MetaData(Campus.SEOUL));
 
         given(lunchRepository.findAllByCampusAndDate(metaDataConsumer.getMetaData(MetaDataType.CAMPUS.name(), inputCampus), inputDate))
-                .willReturn(Optional.of(List.of(lunch2, lunch1)));
+                .willReturn(Optional.of(Arrays.asList(lunch2, lunch1)));
 
-        given(lunchPollRepository.findByMember_IdAndPolledAt(1L, inputDate))
-                .willReturn(lunchPoll);
-
-        given(lunchPollRepository.findByMember_IdAndPolledAt(2L, inputDate))
-                .willReturn(null);
+        if (memberId != null) {
+            lenient().when(lunchPollRepository.findByMember_IdAndPolledAt(memberId, inputDate))
+                    .thenReturn(memberId.equals(1L) ? lunchPoll : null);
+        }
 
         GetLunchListReqDto getLunchListReqDto = GetLunchListReqDto.builder()
                 .campus(inputCampus)
@@ -127,21 +137,13 @@ class LunchServiceTest {
                         .isEqualTo(GetLunchListElementResDto.of(lunch1,0L)),
                 ()-> assertThat(result.getPolledAt()).isEqualTo(outputPolledAt)
         );
-    }
 
-    @Test
-    @DisplayName("캠퍼스와 당일 날짜, 멤버 아이디로 투표 정보가 포함된 점심 메뉴 목록을 조회한다.")
-    void Given_TodayDateAndCampusWithMemberId_When_FindLunches_Then_Succeed() {
-    }
+        verify(clock).instant();
+        verify(clock).getZone();
+        verify(metaDataConsumer, times(2)).getMetaData(MetaDataType.CAMPUS.name(), inputCampus);
+        verify(lunchRepository).findAllByCampusAndDate(
+                metaDataConsumer.getMetaData(MetaDataType.CAMPUS.name(), inputCampus), inputDate);
 
-    @Test
-    @DisplayName("캠퍼스와 날짜로 요청시 정보가 없는 점심 메뉴 목록 조회 성공")
-    void Given_ValidArgument_When_FindLunchesWithEmptyResult_Then_Succeed() {
-    }
-
-    @Test
-    @DisplayName("잘못된 타입의 파라미터로 점심 메뉴 목록 조회시 예외를 던진다.")
-    void Given_IllegalArgument_When_FindLunches_Then_ThrowException() {
     }
 
     @Test
@@ -155,18 +157,25 @@ class LunchServiceTest {
     }
 
     // 점심 메뉴 상세 조회 테스트
-    @Test
-    @DisplayName("점심 아이디를 경로로 점심 상세 정보를 조회한다.")
-    void Given_ValidLunch_When_FindLunchDetail_Then_Succeed(){
+    @ParameterizedTest
+    @CsvSource({"1, mainMenu1","2, mainMenu2"})
+    @DisplayName("점심 아이디로 점심 상세 정보를 조회한다.")
+    void Given_ValidLunch_When_FindLunchDetail_Then_Succeed(Long lunchId, String outputMainMenu){
+
+        // given
+        lenient().when(lunchRepository.findById(1L)).thenReturn(Optional.of(lunch1));
+
+        lenient().when(lunchRepository.findById(2L)).thenReturn(Optional.of(lunch2));
+
+        // when
+        GetLunchResDto getLunchResDto = lunchService.findLunchDetail(lunchId);
+
+        // then
+        assertThat(getLunchResDto.getMainMenu()).isEqualTo(outputMainMenu);
     }
 
     @Test
     @DisplayName("유효하지 않은 날짜의 점심 아이디의 점심 메뉴 상세 조회 요청 시 예외를 던진다.")
     void Given_InValidDateLunch_When_FindLunchDetail_Then_ThrowException(){
-    }
-
-    @Test
-    @DisplayName("잘못된 타입의 경로의 점심 메뉴 상세 조회 요청 시 예외를 던진다.")
-    void Given_IllegalArgument_When_FindLunchDetail_Then_Succeed(){
     }
 }
